Fix button alignment in scouting page

--- a/src/app/components/2019/scout-match/scout-match.component.scss
+++ b/src/app/components/2019/scout-match/scout-match.component.scss
@@ -5,6 +5,7 @@
   font-weight: bold;
   margin-left: 1em;
   margin-right: 1em;
+  align-self: baseline;
 }
 
 .flex-col {
@@ -24,6 +25,7 @@
   font-weight: bold;
   margin-left: 1em;
   margin-right: 1em;
+  align-self: baseline;
 }
 
 .score-label {
